--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.1",
+    "mime": "^2.3.1",
     "morgan": "^1.9.0",
     "node-sass": "^4.9.0",
     "run-sequence": "^2.2.1",
